--- a/index.html
+++ b/index.html
@@ -9,36 +9,243 @@
   <body>
     <div class="wrapper">
       <div class="sidepanel">
-        <a href="">Home</a><a href="">Profile</a><a href="">Messages</a
-        ><a href="">History</a><a href="">Tasks</a><a href="">Communities</a
-        ><a href="">Settings</a><a href="">Support</a><a href="">Privacy</a>
-      </div>
-      <div class="header">
-        <div class="header-row" id="search">
-          <input type="text" />
+        <h2>
+          <img
+            class="icon"
+            src="./images/view-dashboard.svg"
+            alt="Dashboard logo"
+          />DASHBOARD
+        </h2>
+        <div class="link-group-1">
+          <a href=""
+            ><img
+              class="icon"
+              src="images/home-account.svg"
+              alt="House"
+            />Home</a
+          >
+          <a href=""
+            ><img
+              class="icon"
+              src="images/card-account-details.svg"
+              alt="ID card"
+            />Profile</a
+          >
+          <a href=""
+            ><img
+              class="icon"
+              src="images/message.svg"
+              alt="Message"
+            />Messages</a
+          >
+          <a href=""
+            ><img class="icon" src="images/history.svg" alt="Clock" />History</a
+          >
+          <a href=""
+            ><img
+              class="icon"
+              src="images/calendar-check.svg"
+              alt="Calendar"
+            />Tasks</a
+          >
+          <a href=""
+            ><img
+              class="icon"
+              src="images/account-group.svg"
+              alt="Group"
+            />Communities</a
+          >
         </div>
-        <div class="header-row" id="control">
-          <p class="greeting">Hi there, Morgan Oakley (@morgan)</p>
+        <div class="link-group-2">
+          <a href=""
+            ><img class="icon" src="images/cog.svg" alt="Cog" />Settings</a
+          >
+          <a href=""
+            ><img
+              class="icon"
+              src="images/help-circle.svg"
+              alt="Question mark"
+            />Support</a
+          >
+          <a href=""
+            ><img
+              class="icon"
+              src="images/shield-check.svg"
+              alt="Shield check"
+            />Privacy</a
+          >
         </div>
       </div>
-      <div class="projects">
-        <div class="card">Super Cool Project</div>
-        <div class="card">Less Cool Project</div>
-        <div class="card">Impossible App</div>
-        <div class="card">Easy Peasy App</div>
-        <div class="card">Ad Blocker</div>
-        <div class="card">Money Maker</div>
-      </div>
-      <div class="announcements">
-        <p class="message">Site Maintenance</p>
-        <p class="message">Community Share Day</p>
-        <p class="message">Updated Privacy Policy</p>
-      </div>
-      <div class="trending">
-        <p class="person">@tegan</p>
-        <p class="person">@morgan</p>
-        <p class="person">@kendall</p>
-        <p class="person">@alex</p>
+      <div class="main">
+        <div class="header">
+          <div class="header-row-1">
+            <img class="icon" src="images/magnify.svg" alt="Magnifying glass" />
+            <input type="text" />
+            <img
+              class="icon"
+              src="images/bell-ring.svg"
+              alt="Notification bell"
+            />
+            <img class="profile-picture small" src="" alt="" />
+            <p id="name">Morgan Oakley</p>
+          </div>
+          <div class="header-row-2">
+            <img src="" alt="" class="profile-picture large" />
+            <p class="greeting">
+              Hi there, <br />
+              Morgan Oakley (@morgan)
+            </p>
+            <div class="header-actions">
+              <button>New</button><button>Upload</button><button>Share</button>
+            </div>
+          </div>
+        </div>
+        <div class="contents">
+          <h3>Your Projects</h3>
+          <div class="projects">
+            <div class="card">
+              <h4>Super Cool Project</h4>
+              <p></p>
+              <div class="reactions">
+                <img
+                  class="icon"
+                  src="images/star-plus.svg"
+                  alt="star-plus"
+                /><img
+                  class="icon"
+                  src="images/eye-plus.svg"
+                  alt="eye-plus"
+                /><img
+                  class="icon"
+                  src="images/source-fork.svg"
+                  alt="source-fork"
+                />
+              </div>
+            </div>
+            <div class="card">
+              <h4>Less Cool Project</h4>
+              <p></p>
+              <div class="reactions">
+                <img
+                  class="icon"
+                  src="images/star-plus.svg"
+                  alt="star-plus"
+                /><img
+                  class="icon"
+                  src="images/eye-plus.svg"
+                  alt="eye-plus"
+                /><img
+                  class="icon"
+                  src="images/source-fork.svg"
+                  alt="source-fork"
+                />
+              </div>
+            </div>
+            <div class="card">
+              <h4>Impossible App</h4>
+              <p></p>
+              <div class="reactions">
+                <img
+                  class="icon"
+                  src="images/star-plus.svg"
+                  alt="star-plus"
+                /><img
+                  class="icon"
+                  src="images/eye-plus.svg"
+                  alt="eye-plus"
+                /><img
+                  class="icon"
+                  src="images/source-fork.svg"
+                  alt="source-fork"
+                />
+              </div>
+            </div>
+            <div class="card">
+              <h4>Easy Peasy App</h4>
+              <p></p>
+              <div class="reactions">
+                <img
+                  class="icon"
+                  src="images/star-plus.svg"
+                  alt="star-plus"
+                /><img
+                  class="icon"
+                  src="images/eye-plus.svg"
+                  alt="eye-plus"
+                /><img
+                  class="icon"
+                  src="images/source-fork.svg"
+                  alt="source-fork"
+                />
+              </div>
+            </div>
+            <div class="card">
+              <h4>Ad Blocker</h4>
+              <p></p>
+              <div class="reactions">
+                <img
+                  class="icon"
+                  src="images/star-plus.svg"
+                  alt="star-plus"
+                /><img
+                  class="icon"
+                  src="images/eye-plus.svg"
+                  alt="eye-plus"
+                /><img
+                  class="icon"
+                  src="images/source-fork.svg"
+                  alt="source-fork"
+                />
+              </div>
+            </div>
+            <div class="card">
+              <h4>Money Maker</h4>
+              <p></p>
+              <div class="reactions">
+                <img
+                  class="icon"
+                  src="images/star-plus.svg"
+                  alt="star-plus"
+                /><img
+                  class="icon"
+                  src="images/eye-plus.svg"
+                  alt="eye-plus"
+                /><img
+                  class="icon"
+                  src="images/source-fork.svg"
+                  alt="source-fork"
+                />
+              </div>
+            </div>
+          </div>
+          <h3>Announcements</h3>
+          <div class="card announcements">
+            <div class="announcement-item">
+              <p class="message">Community Share Day</p>
+            </div>
+            <div class="announcement-item">
+              <p class="message">Community Share Day</p>
+            </div>
+            <div class="announcement-item">
+              <p class="message">Updated Privacy Policy</p>
+            </div>
+          </div>
+          <h3>Trending</h3>
+          <div class="card trending">
+            <p class="user">
+              <img src="" alt="" class="profile-picture small" />@tegan
+            </p>
+            <p class="user">
+              <img src="" alt="" class="profile-picture small" />@morgan
+            </p>
+            <p class="user">
+              <img src="" alt="" class="profile-picture small" />@kendall
+            </p>
+            <p class="user">
+              <img src="" alt="" class="profile-picture small" />@alex
+            </p>
+          </div>
+        </div>
       </div>
     </div>
   </body>
