--- a/index.html
+++ b/index.html
@@ -121,9 +121,12 @@
         <div class="contents">
           <h3>Your Projects</h3>
           <div class="projects">
-            <div class="card">
+            <div class="card project">
               <h4>Super Cool Project</h4>
-              <p></p>
+              <p>
+                Sed tempus ut lacus ut scelerisque. Suspendisse sollicitum nibh
+                erat, id facillis felix accumsan nec.
+              </p>
               <div class="reactions">
                 <img
                   class="icon"
@@ -140,9 +143,14 @@
                 />
               </div>
             </div>
-            <div class="card">
+            <div class="card project">
               <h4>Less Cool Project</h4>
-              <p></p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Ducimus voluptates dolores blanditiis aut soluta, laudantium
+                quasi at quaerat eaque nesciunt atque voluptate exercitationem
+                molestiae adipisci dolor, error iusto, possimus doloremque.
+              </p>
               <div class="reactions">
                 <img
                   class="icon"
@@ -159,9 +167,14 @@
                 />
               </div>
             </div>
-            <div class="card">
+            <div class="card project">
               <h4>Impossible App</h4>
-              <p></p>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae
+                ducimus aut culpa voluptatum explicabo consequatur ad aperiam
+                quaerat. Sint suscipit consequuntur ipsum error esse ipsam vitae
+                odit hic quisquam labore.
+              </p>
               <div class="reactions">
                 <img
                   class="icon"
@@ -178,9 +191,14 @@
                 />
               </div>
             </div>
-            <div class="card">
+            <div class="card project">
               <h4>Easy Peasy App</h4>
-              <p></p>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi
+                ipsam at quos amet iusto quasi sapiente modi deserunt
+                perferendis sit voluptatem autem, pariatur voluptate excepturi
+                qui distinctio labore odit enim?
+              </p>
               <div class="reactions">
                 <img
                   class="icon"
@@ -197,9 +215,14 @@
                 />
               </div>
             </div>
-            <div class="card">
+            <div class="card project">
               <h4>Ad Blocker</h4>
-              <p></p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur
+                excepturi, minus inventore repudiandae libero atque ducimus quae
+                consectetur architecto consequuntur numquam vel optio dolores,
+                quos unde laudantium quod commodi qui.
+              </p>
               <div class="reactions">
                 <img
                   class="icon"
@@ -216,9 +239,14 @@
                 />
               </div>
             </div>
-            <div class="card">
+            <div class="card project">
               <h4>Money Maker</h4>
-              <p></p>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Praesentium odit aspernatur placeat cupiditate iste accusantium
+                maiores hic laborum est, deserunt sequi eaque quae aut a ex
+                deleniti iure exercitationem unde?
+              </p>
               <div class="reactions">
                 <img
                   class="icon"
@@ -239,29 +267,60 @@
           <h3>Announcements</h3>
           <div class="card announcements">
             <div class="announcement-item">
-              <p class="message">Community Share Day</p>
+              <h5>Site Maintenance</h5>
+              <p>
+                Vestibulum condimentum tellus lacus, in accusam elit maximus ac.
+                Donec hendrerit solade congue...
+              </p>
             </div>
             <div class="announcement-item">
-              <p class="message">Community Share Day</p>
+              <h5>Community Share Day</h5>
+              <p>
+                Nam vel lectus tincidunt, rutrum nulla eu, ornare porttitor...
+              </p>
             </div>
             <div class="announcement-item">
-              <p class="message">Updated Privacy Policy</p>
+              <h5>Updated Privacy Policy</h5>
+              <p>
+                Phasellus efficitur nisi eget elit consectetur, eget condimentum
+                ante auctor. Cras fringilla sagittis sem in mattis...
+              </p>
             </div>
           </div>
           <h3>Trending</h3>
           <div class="card trending">
-            <p class="user">
-              <img src="" alt="" class="profile-picture small" />@tegan
-            </p>
-            <p class="user">
-              <img src="" alt="" class="profile-picture small" />@morgan
-            </p>
-            <p class="user">
-              <img src="" alt="" class="profile-picture small" />@kendall
-            </p>
-            <p class="user">
-              <img src="" alt="" class="profile-picture small" />@alex
-            </p>
+            <div class="user">
+              <img
+                src="images/balcony-girl-2.jpg"
+                alt=""
+                class="profile-picture small"
+              />
+              <p class="name">@tegan</p>
+              <p class="status">World Peace Builder</p>
+            </div>
+            <div class="user">
+              <img
+                src="images/balcony-girl.png"
+                alt=""
+                class="profile-picture small"
+              />
+              <p class="name">@morgan</p>
+              <p class="status">Super Cool Project</p>
+            </div>
+            <div class="user">
+              <img
+                src="images/sunlight.jpg"
+                alt=""
+                class="profile-picture small"
+              />
+              <p class="name">@kendall</p>
+              <p class="status">Life Changing App</p>
+            </div>
+            <div class="user">
+              <img src="images/ufos.jpg" alt="" class="profile-picture small" />
+              <p class="name">@alex</p>
+              <p class="status">No Traffic Maker</p>
+            </div>
           </div>
         </div>
       </div>
